force-app/main/default/objects/Case/fields/aos_Animal_Report_Summary__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Report_Summary__c</fullName>
    <inlineHelpText>Summary is auto generated by related Animal Reports.</inlineHelpText>
    <label>Animal Report Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>