force-app/main/default/objects/Case/fields/aos_Job_Categorisation__c.field-meta.xml
<CustomField>
    <fullName>aos_Job_Categorisation__c</fullName>
    <label>Job Categorisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Insufficient Food and Water</fullName>
                <label>Insufficient food and water</label>
            </value>
            <value>
                <fullName>Insufficient Shelter</fullName>
                <label>Insufficient shelter</label>
            </value>
            <value>
                <fullName>Ill-treatment (direct physical abuse)</fullName>
            </value>
            <value>
                <fullName>Tied continuously or locked in a small pen/cage</fullName>
            </value>
            <value>
                <fullName>Breeder or Pet Shop Inspection</fullName>
                <label>Breeder or pet shop inspection</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Vet treatment</fullName>
            </value>
            <value>
                <fullName>Abandonment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>