force-app/main/default/objects/Case/fields/aos_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Location_Address__c</fullName>
    <complianceGroup>PII</complianceGroup>
    <label>Location Address</label>
    <type>Address</type>
</CustomField>