force-app/main/default/objects/Case/fields/aos_Notify_Inspector__c.field-meta.xml
<CustomField>
    <fullName>aos_Notify_Inspector__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Inspector</label>
    <type>Checkbox</type>
</CustomField>