force-app/main/default/objects/Case/fields/aos_One_Drive_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>aos_One_Drive_Folder_Name__c</fullName>
    <formula>CaseNumber + &apos;aosuat&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One Drive Folder Name</label>
    <type>Text</type>
</CustomField>