force-app/main/default/objects/Case/fields/aos_Phone__c.field-meta.xml
<CustomField>
    <fullName>aos_Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>