force-app/main/default/objects/Case/fields/aos_Reported_Animal_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Reported_Animal_Type__c</fullName>
    <label>Reported Animal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Livestock</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>